<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/video_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_titlebar"
            app:navigationIcon="@mipmap/abc_ic_ab_back_mtrl_am_alpha"
            app:title="登录"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_register_selecter"
            android:gravity="center"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16_sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_toolbar"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@mipmap/icon" />
        <!--UserName-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgrey" />

            <ImageView
                android:id="@+id/iv_user_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/login_user_icon" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/iv_user_pic"
                android:background="@color/transparent"
                android:hint="@string/str_username" />
        </RelativeLayout>
        <!--Password-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgrey" />

            <ImageView
                android:id="@+id/iv_pwd_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/login_pw_icon" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/iv_pwd_pic"
                android:background="@color/transparent"
                android:hint="@string/str_password"
                android:inputType="textPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/et_password"
                android:background="@color/lightgrey" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_login_selector"
            android:text="@string/str_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:text="忘记密码"
            android:textColor="@color/skyblue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_wechat" />

        <ImageView
            android:id="@+id/btn_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/login_qq" />

        <ImageView
            android:id="@+id/btn_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_sina_weibo" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="其他登录方式"
        android:textColor="@color/lightgrey" />
</RelativeLayout>
